ui: enhance installer with progress bar and consistent styling

--- a/install/templates/step2.html.twig
+++ b/install/templates/step2.html.twig
@@ -8,29 +8,26 @@
             {% trans %}Step{% endtrans %} {{ current_step }}: {% trans %}Getting ready for installation{% endtrans %}
         </div>
         <div class="card-body">
-            <div class="alert alert-info">
-                <h5>{% trans %}Before you continue{% endtrans %}</h5>
-                <p>{% trans %}This installer expects you to have a PowerDNS database accessible from this server. This installer also expects you to have never ran Poweradmin before, or that you want to overwrite the Poweradmin part of the database.{% endtrans %}</p>
+            <div class="alert alert-info py-2">
+                <strong>{% trans %}Before you continue:{% endtrans %}</strong> {% trans %}This installer expects you to have a PowerDNS database accessible from this server. This installer also expects you to have never ran Poweradmin before, or that you want to overwrite the Poweradmin part of the database.{% endtrans %}
             </div>
 
-            <div class="alert alert-warning">
-                <h5>{% trans %}Important{% endtrans %}</h5>
-                <p>{% trans %}If you have had Poweradmin running before, any data in the following tables will be destroyed: perm_items, perm_templ, perm_templ_items, users and zones. This installer will, of course, not touch the data in the PowerDNS tables of the database.{% endtrans %}</p>
-                <p><strong>{% trans %}It is recommended that you create a backup of your database before proceeding.{% endtrans %}</strong></p>
+            <div class="alert alert-warning py-2">
+                <strong>{% trans %}Important:{% endtrans %}</strong> {% trans %}If you have had Poweradmin running before, any data in the following tables will be destroyed: perm_items, perm_templ, perm_templ_items, users and zones. This installer will, of course, not touch the data in the PowerDNS tables of the database.{% endtrans %}
+                <p class="mb-0 mt-1"><strong>{% trans %}It is recommended that you create a backup of your database before proceeding.{% endtrans %}</strong></p>
             </div>
 
-            <p>{% trans %}The alternative for this installer is a manual installation. Refer to the poweradmin.org website if you want to go down that road.{% endtrans %}</p>
-            <p>{% trans %}Finally, if you see any errors during the installation process, a problem report would be appreciated. You can report problems (and ask for help) on the
+            <p class="small">{% trans %}The alternative for this installer is a <a href="https://docs.poweradmin.org/installation/manual/" target="_blank">manual installation</a>. Refer to the documentation if you want to go down that road.{% endtrans %}</p>
+            <p class="small">{% trans %}Finally, if you see any errors during the installation process, a problem report would be appreciated. You can report problems (and ask for help) on the
                     <a href="https://github.com/poweradmin/poweradmin/issues" target="_blank">poweradmin</a> issues.{% endtrans %}</p>
 
-            <div class="mt-4">
-                <p class="lead">{% trans %}Do you want to proceed now?{% endtrans %}</p>
+            <div class="mt-3">
                 <form method="post">
                     <input type="hidden" name="install_token" value="{{ install_token }}">
                     <input type="hidden" name="language" value="{{ language }}">
                     <input type="hidden" name="step" value="{{ next_step }}">
                     <input type="submit" name="submit" class="btn btn-sm btn-primary"
-                           value="{% trans %}Go to step{% endtrans %} {{ next_step }}">
+                           value="{% trans %}Continue to step{% endtrans %} {{ next_step }}">
                 </form>
             </div>
         </div>
