--- a/install/templates/step6.html.twig
+++ b/install/templates/step6.html.twig
@@ -3,19 +3,19 @@
 {% block step_description %}{% trans %}Create configuration file{% endtrans %}{% endblock %}
 
 {% block content %}
-    <div class="card mb-4">
+    <div class="card">
         <div class="card-header bg-secondary text-white">
             {% trans %}Step{% endtrans %} {{ current_step }}: {% trans %}Create configuration file{% endtrans %}
         </div>
         <div class="card-body">
-            <div class="alert alert-success">
+            <div class="alert alert-success py-2 mb-3">
                 <strong>{% trans %}Configuration File:{% endtrans %}</strong> {% trans %}Create the file {% endtrans %}
                 <em>config/settings.php</em>
                 {% trans %} with the following content:{% endtrans %}
             </div>
 
-            <div class="p-3 bg-light rounded">
-                <pre class="bg-dark text-light p-3 rounded">
+            <div class="p-2 bg-light rounded">
+                <pre class="bg-dark text-light p-2 rounded small">
 &lt;?php
 
 /**
@@ -74,24 +74,17 @@ return [
 {% if dns_ns4 is defined and dns_ns4 is not empty %}
         'ns4' => '{{ dns_ns4 }}',
 {% endif %}
-    ],
-
-    /**
-     * Miscellaneous Settings
-     */
-    'misc' => [
-        'display_errors' => false, // Set to true to show detailed error messages (not recommended in production)
-    ],
+    ]
 ];
 </pre>
             </div>
 
-            <form method="post" class="mt-4">
+            <form method="post" class="mt-3">
                 <input type="hidden" name="install_token" value="{{ install_token }}">
                 <input type="hidden" name="step" value="{{ next_step }}">
                 <input type="hidden" name="language" value="{{ language }}">
                 <input type="submit" name="submit" class="btn btn-sm btn-primary"
-                       value="{% trans %}Go to step{% endtrans %} {{ next_step }}">
+                       value="{% trans %}Continue to step{% endtrans %} {{ next_step }}">
             </form>
         </div>
     </div>
